enterprise-server/k8s/deployment.yaml
# Generated by IBM TransformationAdvisor
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: enterprise-server
  labels:
    app: enterprise-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enterprise-server
  template:
    metadata:
      labels:
        app: enterprise-server
    spec:
      containers:
        - name: enterprise-server
          image: "sample/enterprise-server:0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
            - containerPort: 9443
            - containerPort: 2809
            - containerPort: 9402
            - containerPort: 7276
            - containerPort: 7286
