enterprise-server/k8s/service.yaml
# Generated by IBM TransformationAvisor
apiVersion: v1
kind: Service
metadata:
  name: enterprise-server-svc
  labels:
    app: enterprise-server

spec:
  type: NodePort
  ports:
    - port: 9080
      protocol: TCP
      name: tcp-9080-http
      targetPort: 9080
    - port: 9443
      protocol: TCP
      name: tcp-9443-https
      targetPort: 9443
    - port: 2809
      protocol: TCP
      name: tcp-2809-iiop
      targetPort: 2809
    - port: 9402
      protocol: TCP
      name: tcp-9402-iiop-ssl
      targetPort: 9402
    - port: 7276
      protocol: TCP
      name: tcp-7276-jms
      targetPort: 7276
    - port: 7286
      protocol: TCP
      name: tcp-7286-jms-ssl
      targetPort: 7286
  selector:
    app: enterprise-server
