enterprise-server/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: enterprise-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: enterprise-server.local 
    http:
      paths:
      - path: /*
        backend:
          serviceName: enterprise-server-svc
          servicePort: 9080
